<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1_bezero"
    tools:context=".registro">

    <EditText
        android:id="@+id/editText4"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="36dp"
        android:autofillHints="username"
        android:background="#79553D"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="68dp"
        android:autofillHints="username"
        android:background="#79553D"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="36dp"
        android:autofillHints="username"
        android:background="#79553D"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="214dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="28dp"
        android:autofillHints="username"
        android:background="#79553D"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="numberSigned"
        android:maxLength="9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="215dp"
        android:layout_height="34dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="28dp"
        android:autofillHints="username"
        android:background="#79553D"
        android:ems="10"
        android:hint="@string/DNI"
        android:inputType="numberSigned"
        android:maxLength="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="214dp"
        android:layout_height="31dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="28dp"
        android:autofillHints="username"
        android:background="#79553D"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/butto_style2"
        android:hint="@string/registrar"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/butto_style3"
        android:hint="@string/volver"
        android:onClick="registrarse"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />

</androidx.constraintlayout.widget.ConstraintLayout>