<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#282828">

    <EditText
        android:id="@+id/ET_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/string_user"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/ET_pass"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorwhite"
        android:textColorHint="@color/colorwhite"/>

    <EditText
        android:id="@+id/ET_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/string_pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/bt_singin"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorwhite"
        android:textColorHint="@color/colorwhite"/>

    <Button
        android:id="@+id/bt_singin"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/string_singIn"
        app:layout_constraintBottom_toTopOf="@+id/bt_singup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/butto_style"
        />

    <Button
        android:id="@+id/bt_singup"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="96dp"
        android:text="@string/string_singUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/butto_style2"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="104dp"
        android:layout_height="107dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/ET_user"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/bt_mapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="Prueba_Mapa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>